--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "url": "https://github.com/yanivle/yanivle.github.io"
   },
   "devDependencies": {
-    "gulp": "^4.0.2"
-  },
-  "dependencies": {
     "browser-sync": "^2.26.7",
     "concurrent-transform": "^1.0.0",
-    "gulp-autoprefixer": "^7.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-gm": "0.0.9",
     "gulp-image-resize": "^0.13.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2"
-  }
+  },
+  "dependencies": {
+    "gulp-cli": "^2.2.0"
+  },
+  // "browserslist": [
+  //   "last 1 version",
+  //   "> 1%",
+  //   "IE 10"
+  // ]
+  // "browserslist": [
+  //   "last 2 versions",
+  //   "Firefox ESR",
+  //   "safari 5",
+  //   "ie 8",
+  //   "ie 9",
+  //   "opera 12.1",
+  // ]
 }
